<resources>
    <string name="app_name">Orgs</string>
    <string name="string_cesta_de_frutas">Cesta de Frutas</string>
    <string name="string_frutas">Laranja, manga e uva</string>
    <string name="string_preco">19,99</string>
    <string name="string_nome_hint">Nome</string>
    <string name="string_desc_hint">Descrição</string>
    <string name="string_valor_hint">Preço</string>
    <string name="string_botao_salvar">"SALVAR"</string>
    <string name="string_content_buttons">""</string>
</resources>