<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activity.FormularioProdutoActivity">

    <EditText android:id="@+id/formulario_campo_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/formulario_campo_descricao"
        android:hint="@string/string_nome_hint"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText android:id="@+id/formulario_campo_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formulario_campo_nome"
        app:layout_constraintBottom_toTopOf="@id/formulario_campo_valor"
        android:hint="@string/string_desc_hint"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor" />

    <EditText android:id="@+id/formulario_campo_valor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/formulario_campo_descricao"
        android:hint="@string/string_valor_hint"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:inputType="number"
        tools:ignore="LabelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>